# Facebook-Marketing-API-Rust-Client

./: Cargo.toml  LICENSE  README.md
src/: client.rs  errors.rs  main.rs  types.rs
