[package]
name = "fbappv2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }  
reqwest = { version = "0.11.27", features = ["json", "blocking"] }  
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"  
anyhow = "1.0"
thiserror = "2.0.8"